--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <header id="header">
     <div class="container">
       <div class="logo"></div>
+      <div class="gnav_sp">
+        <div class="menuline"></div>
+      </div>
       <div class="gmenu">
         <ul class="gmenu_inner">
           <li><a href="">Home</a></li>
@@ -89,7 +92,7 @@
               <img src="./images/call.svg" alt="">
             </div>
             <div class="contact">
-              <p class="tel">012345678</p>
+              <p class="tel"><a href="tel:012345678">012345678</a></p>
               <p>Call Us Anytime</p>
             </div>
           </div>
@@ -261,25 +264,25 @@
         <div class="column_inner">
           <div class="itemise">
             <h3 class="figure">12</h3>
-            <p class="text">Years Of Experiance</p>
+            <p class="text">Years Of <br class="forTBSP">Experiance</p>
           </div>
         </div>
         <div class="column_inner">
           <div class="itemise">
             <h3 class="figure">85</h3>
-            <p class="text">Success Project</p>
+            <p class="text">Success <br class="forTBSP">Project</p>
           </div>
         </div>
         <div class="column_inner">
           <div class="itemise">
             <h3 class="figure">15</h3>
-            <p class="text">Active Project</p>
+            <p class="text">Active <br class="forTBSP">Project</p>
           </div>
         </div>
         <div class="column_inner">
           <div class="itemise">
             <h3 class="figure">95</h3>
-            <p class="text">Happy CUstomers</p>
+            <p class="text">Happy <br class="forTBSP">CUstomers</p>
           </div>
         </div>
       </div>
@@ -415,7 +418,9 @@
       </div>
     </div>
     <div class="copyright">
-      <p>Copyright &copy; Interno | Designed by Victorflow Templates - Powered by Webflow</p>
+      <p>Copyright &copy; Interno <span class="forPCTB">|</span><br class="forSP"> Designed by Victorflow Templates
+        <span class="forPCTB">-</span><br class="forSP"> Powered by Webflow
+      </p>
     </div>
   </footer>
 </body>
